build(cmake): Add basic cmake support and create empty workspace
This commit adds a CMake skeleton that will implement an integration
workflow of different components.

In this commit:
* We introduce cmake-format in the pre-commit hooks and add the
.cmake-format.py configuration file
* Add top-level CMakeLists.txt and CMakePresets.json file. The
presets file defines two basic configurations we have the Release
and Build.
* Add in the Makefile helper configure and build targets that
invoke CMake for the user and build the project
* Also improve the generated Makefile help command to print
the new dynamically created targets
* Introduce the cmake folder that contains *.cmake files that
provide helper CMake functions and macros
* Add the chroot.cmake file that provides helper function to
build a python venv and install helper python dependencies in it
* Introduce the workspace folder that will hold different
python venv/chroot environments where different tools will
be installed depending on the target/desired task
* Populate the checkin-job with basic cmake execution steps.
* Add in our docker images support for building the latest make and
cmake

--- a/.gitignore
+++ b/.gitignore
@@ -125,5 +125,8 @@ dmypy.json
 cython_debug/
 
 
+# CMake build artifacts
+build-*
+
 # list of external repos cloned by west
 devops/docker-wrapper
