--- a/ci-docker-images/ubuntu/Docker/Dockerfile
+++ b/ci-docker-images/ubuntu/Docker/Dockerfile
@@ -41,6 +41,17 @@ RUN \
   --mount=type=cache,target=/var/lib/apt,sharing=locked \
   bash /tmp/install/ubuntu_install_core.sh
 
+COPY install/ubuntu_install_make_source.sh /tmp/install/ubuntu_install_make_source.sh
+RUN \
+  --mount=type=cache,target=/var/cache/apt,sharing=locked \
+  --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  bash /tmp/install/ubuntu_install_make_source.sh
+
+COPY install/ubuntu_install_cmake_source.sh /tmp/install/ubuntu_install_cmake_source.sh
+RUN \
+  --mount=type=cache,target=/var/cache/apt,sharing=locked \
+  --mount=type=cache,target=/var/lib/apt,sharing=locked \
+  bash /tmp/install/ubuntu_install_cmake_source.sh
 
 FROM dev_base AS dev
 
