--- a/.github/workflows/checkin-tests.yml
+++ b/.github/workflows/checkin-tests.yml
@@ -7,6 +7,10 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ubuntu_22.04_dev
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,6 +25,12 @@ jobs:
         uses: actions/setup-python@v5.2.0
         with:
           python-version: '3.10'
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3.3.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Install west
         run: |
             python -m pip install --upgrade pip
@@ -28,3 +38,14 @@ jobs:
       - name: Update workspace
         run: |
             west update
+      - name: Build core venv
+        run: |
+            make venv
+      - name: Pull the docker image
+        run: |
+            source venv/bin/activate \
+            && ./repo-cmds.py docker pull ${{ env.IMAGE_NAME }}
+      - name: Configure the project
+        run: |
+            source venv/bin/activate \
+            && ./repo-cmds.py docker ${{ env.IMAGE_NAME }} "make configure-Release"
