build(google-test): Add support for building google-test from source
This commit:

* Checks out the google-test repo by adding it to the west.yml file
* Renames the "example" chroot environment to example-cpp
* Addresses build-dependency issues, where it splits the targets
  that create the skeleton of the pyvenv from the original CMakeLists.txt
  file under workspaces. This is necessary so that we can have targets
  like llama-cpp that can install their artifacts inside the pyvenv.
  For this reason the build-target and directory of the pyvenv need
  to be known by the target that builds google-test.
* Add helper Makefile command that lists all ninja targets of
  interest
* Update the documentation where necessary.
* Update the check-in CI job to build the google-test target

--- a/.github/workflows/checkin-tests.yml
+++ b/.github/workflows/checkin-tests.yml
@@ -49,3 +49,7 @@ jobs:
         run: |
             source venv/bin/activate \
             && ./repo-cmds.py docker ${{ env.IMAGE_NAME }} "make configure-Release"
+      - name: Build google-test
+        run: |
+            source venv/bin/activate \
+            && ./repo-cmds.py docker ${{ env.IMAGE_NAME }} "cd build-Release && ninja google-test"
