build(docs): Add support for building documentation using mkdocs
This commit adds the necessary dependencies for building documentation
using mkdocs:

* Create the docs-build workspace where we install any required
python tools and packages
* We introduce the top-level mkdocs.yml filed that includes a basic
mkdocs configuration that uses the simple tool to pull all README.md
files in the repo and compile the overall documentation
* Adds the docs folder with placeholder files.
* Introduces the mkdocs and docs-serve build target to build
and view the documentation.
* Builds the documentation and deploys it after a merge in `main`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,13 @@ set(WORKSPACES_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/workspace)
 
 # Name of the workspace that will hold any example-cpp related tools
 set(EXAMPLE_CPP_WS_NAME example-cpp)
+# Documentation builder workspace
+set(DOCS_BUILD_WS_NAME docs-build)
 
 include(workspace/pyvenv-setup.cmake)
 add_subdirectory("libs")
 add_subdirectory("workspace")
+
+# The docs directory depends that the workspaces have been created and build
+# dependencies in the docs-build pyvenv installed
+add_subdirectory("docs")
