--- a/.github/workflows/checkin-tests.yml
+++ b/.github/workflows/checkin-tests.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5.2.0
         with:
-          python-version: '3.10'
+          python-version: '3.11'
       - name: Log in to the Container registry
         uses: docker/login-action@v3.3.0
         with:
@@ -53,3 +53,7 @@ jobs:
         run: |
             source venv/bin/activate \
             && ./repo-cmds.py docker ${{ env.IMAGE_NAME }} "cd build-Release && ninja google-test"
+      - name: Build the documentation
+        run: |
+            source venv/bin/activate \
+            && ./repo-cmds.py docker ${{ env.IMAGE_NAME }} "cd build-Release && ninja mkdocs"
