--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,10 +20,47 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4.1.7
+      - name: Checkout repository
+        uses: actions/checkout@v4.1.7
 
-    - name: Set up Python
-      uses: actions/setup-python@v5.1.1
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v5.1.1
+        with:
+          python-version: '3.11'
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3.3.0
+        with:
+            registry: ${{ env.REGISTRY }}
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install west
+        run: |
+            python -m pip install --upgrade pip
+            pip install west
+      - name: Update workspace
+        run: |
+            west update
+      - name: Build core venv
+        run: |
+            make venv
+      - name: Pull the docker image
+        run: |
+            source venv/bin/activate \
+            && ./repo-cmds.py docker pull ${{ env.IMAGE_NAME }}
+      - name: Configure the project
+        run: |
+            source venv/bin/activate \
+            && ./repo-cmds.py docker ${{ env.IMAGE_NAME }} "make configure-Release"
+      - name: Build the documentation
+        run: |
+            source venv/bin/activate \
+            && ./repo-cmds.py docker ${{ env.IMAGE_NAME }} "cd build-Release && ninja mkdocs"
+      - name: Setup Pages
+        uses: actions/configure-pages@v5.0.0
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          # Upload the built site directory
+          path: './build-Release/docs'
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4.0.5
